# openstack-manuals-convert

./: Makefile.am  README.md  abstract.xsl.patch  autogen.sh  configure.ac  openstack-manuals-convert.spec.in  subtitle.xsl.patch
cfg/: publican.cfg
etc/java/resolver/: CatalogManager.properties
xml/: Author_Group.xml  Legal_Notice.xml  Preface.xml  Revision_History.xml
xsl/extract/: sourceDirectory-includes.xsl  sourceDirectory.xsl  xiincludes-remote.xsl  xiincludes-xml.xsl
xsl/transform/: all.xsl  book.xsl  common-extras.xsl  common-images.xsl  common.xsl  revhistory-populate.xsl  xiincludes-replace.xsl
